[gd_scene load_steps=2 format=3 uid="uid://bdgi2a1ok72ij"]

[ext_resource type="Script" path="res://src/elements/hud/characteristics_menu/characteristics_menu_item/characteristics_menu_item.gd" id="1_r8c6v"]

[node name="CharacteristicMenuItem" type="HBoxContainer"]
script = ExtResource("1_r8c6v")

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade"

[node name="CostLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cost: 1"

[connection signal="button_down" from="HBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_button_down"]
